syntax = "proto3";

package sarus_data_spec;

message Scalar {
  // A Scalar represents data that does not fulfill the promise of a Dataset.
  // A Dataset promises to have a schema and the possibility to iterate on
  // pyarrow.RecordBatches

  // A Scalar does not ensure this possibility. As a consequence, oprations
  // from standard libraries are allowed (pandas.mean, numpy.std,...) but
  // operations implemented for Datasets by Sarus like computing marginals or
  // fitting a Keras model cannot be performed on a Scalar.

  // Scalars are generated by transforms that explicitly require a specific
  // format (e.g. as_pandas, as_numpy,...) or as byproducts of transforms
  // (model weights, training history,...).

  string uuid = 1; // e.g. RFC 4122 id used to refer to the dataset (content linked?)
  string name = 2;
  string doc = 3;
  Spec spec = 4;
  map<string, string> properties = 5; // Other properties

  // Definitions
  message Spec { // How to obtain the dataset
    oneof spec {
      Transformed transformed = 1;
      Model model = 2;
    }
  }

  message Transformed {
    string transform = 1; // Transform id
    repeated string arguments = 2; // Dataset or other object ids
    map<string,string> named_arguments = 3;
  }

  message Model {
    bytes arguments = 1;
    bytes named_arguments = 2;
    ModelClass model_class = 3;

    enum ModelClass {
      TF_KERAS = 0;
      SK_SVC = 1;
    };
  }
}
